# SpaceXPlorer

./: .gitignore  README.md  TimeLog.md
android-app/: README.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/drawable/: circle_border.xml  dropdown_background.xml  ic_collapse_arrow.xml  ic_comment.xml  ic_discover_black_24dp.xml  ic_events_black_24dp.xml  ic_expand_arrow.xml  ic_map_black_24dp.xml  ic_profile_black_24dp.xml  ic_share.xml  ic_star_filled.xml  ic_star_outline.xml  ic_thumbs_down.xml  ic_thumbs_up.xml  toggle_button_background.xml  toggle_button_background_default.xml  toggle_button_background_toggled.xml  user_icon_bordered.xml
android-app/app/src/main/res/layout/: activity_gettingstarted.xml  activity_login.xml  activity_register.xml  activity_welcome.xml  comment_card.xml  event_card.xml  event_description_card.xml  fragment_discover.xml  fragment_events.xml  fragment_map.xml  fragment_newsfeed.xml  fragment_profile.xml  list_item.xml  map_event_info_card.xml  newsfeed_card.xml  (+1 more)
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
backend/: Makefile  README.md  docker-compose.yaml  test.py
backend/auth_microservice/: API_classes.py  Dockerfile  main.py  pyproject.toml
backend/data_microservice/: API_Interfaces.py  Dockerfile  main.py  pyproject.toml
backend/gen_utils/: general_API_classes.py  load_envs.py  utils.py
backend/user_interactions_microservice/: Dockerfile  load_envs.py  main.py  pyproject.toml
(+62 files in other folders)
