[tool.poetry]
name = "Microservice3"
version = "0.1.0"
description = "Microservice3"
authors = ["Joel Deodhar <jdeodhar@uwaterloo.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.9"
redis= "^5.0.5"
sqlmodel = "0.0.19"
pandas = "2.2.2"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"